<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.readhtml.surajjorwekar.microu.Register.HospitalRegistration">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:background="#ffffff">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#98181518"
                    android:text="@string/fa_icon_user"
                    android:id="@+id/iname"
                    android:textSize="15dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/name"
                    android:hint="Name"
                    android:textColor="#252525"
                    android:textColorHint="#4c4c4c"
                    android:layout_marginLeft="6dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/fa_calendar"
                    android:id="@+id/ical"
                    android:textSize="13sp"
                    android:textColor="#98181518" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/indate"
                    android:hint="In-Date"
                    android:layout_weight="50"
                    android:textColor="#252525"
                    android:textColorHint="#4c4c4c"
                    android:layout_marginLeft="6dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/fa_calendar"
                    android:id="@+id/iapp"
                    android:textSize="13sp"
                    android:textColor="#98181518" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/app"
                    android:hint="Last Visit"
                    android:layout_weight="50"
                    android:textColor="#252525"
                    android:textColorHint="#4c4c4c"
                    android:layout_marginLeft="6dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/fa_anchor"
                    android:id="@+id/idoc"
                    android:textSize="13dp"
                    android:textColor="#98181518" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/doctor"
                    android:hint="Doctor"
                    android:textColor="#252525"
                    android:textColorHint="#4c4c4c"
                    android:layout_marginLeft="6dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/fa_ambulance"
                    android:id="@+id/idec"
                    android:textSize="13dp"
                    android:textColor="#98181518" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dis"
                    android:hint="Disease"
                    android:textColor="#252525"
                    android:textColorHint="#4c4c4c"
                    android:layout_marginLeft="6dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/age"
                    android:layout_weight="33"
                    android:hint="Age"
                    android:textColor="#252525"
                    android:textColorHint="#4c4c4c"
                    android:layout_marginLeft="10dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/weight"
                    android:layout_weight="33"
                    android:hint="Weight"
                    android:textColor="#252525"
                    android:textColorHint="#4c4c4c" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/height"
                    android:layout_weight="33"
                    android:hint="Height"
                    android:textColor="#252525"
                    android:textColorHint="#4c4c4c" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/fa_battery"
                    android:id="@+id/ibat"
                    android:textSize="13dp"
                    android:textColor="#98181518" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/insuff"
                    android:hint="Insufficiency"
                    android:textColor="#252525"
                    android:textColorHint="#4c4c4c"
                    android:layout_marginLeft="6dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/fa_medkit"
                    android:id="@+id/imed"
                    android:textSize="13dp"
                    android:textColor="#98181518" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/medi"
                    android:hint="Medication"
                    android:textColor="#252525"
                    android:textColorHint="#4c4c4c"
                    android:layout_marginLeft="6dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/fa_phone"
                    android:id="@+id/icon"
                    android:textSize="13dp"
                    android:textColor="#98181518" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/emergency"
                    android:hint="Emergency Contact Number"
                    android:textColor="#252525"
                    android:textColorHint="#4c4c4c"
                    android:layout_marginLeft="6dp" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
